# EplayerPlusPlus

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
resources/: resources.qrc
src/: AppInfo.rc.in  CMakeLists.txt  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/models/: CompareSession.cpp  CompareSession.h  FolderModel.cpp  FolderModel.h  ImageListModel.cpp  ImageListModel.h
src/services/: CategoryExporter.cpp  CategoryExporter.h  ImageComparer.cpp  ImageComparer.h  ImageLoader.cpp  ImageLoader.h  ImageMarkManager.cpp  ImageMarkManager.h  SettingsManager.cpp  SettingsManager.h  VlmAnnotationService.cpp  VlmAnnotationService.h
src/styles/: FluentStyle.cpp  FluentStyle.h
src/utils/: FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h
src/widgets/: ArrowOverlay.cpp  ArrowOverlay.h  BrowsePanel.cpp  BrowsePanel.h  ComparePanel.cpp  ComparePanel.h  FlowLayout.cpp  FlowLayout.h  FolderPanel.cpp  FolderPanel.h  ImageContextMenu.cpp  ImageContextMenu.h  SettingsDialog.cpp  SettingsDialog.h  ThumbnailWidget.cpp  ThumbnailWidget.h  VlmAnnotationDialog.cpp  VlmAnnotationDialog.h  VlmProviderSettingsDialog.cpp  VlmProviderSettingsDialog.h  ZoomableImageWidget.cpp  ZoomableImageWidget.h
tests/: CMakeLists.txt  bench_ThumbnailPerf.cpp  tst_BrowsePanel.cpp  tst_CategoryExporter.cpp  tst_ComparePanel.cpp  tst_CompareSession.cpp  tst_FileUtils.cpp  tst_FlowLayout.cpp  tst_FluentStyle.cpp  tst_FolderModel.cpp  tst_FolderPanel.cpp  tst_ImageComparer.cpp  tst_ImageContextMenu.cpp  tst_ImageListModel.cpp  tst_ImageLoader.cpp  tst_ImageMarkManager.cpp  tst_ImageUtils.cpp  tst_MainWindow.cpp  tst_SettingsDialog.cpp  tst_SettingsManager.cpp  tst_VlmAnnotationDialog.cpp  tst_VlmAnnotationService.cpp  tst_VlmProviderSettingsDialog.cpp  tst_ZoomableImageWidget.cpp
tools/: gen_icon.cpp
